fix: add overflow hidden on body when burger is active

--- a/src/components/BurgerMenu/BurgerMenu.module.scss
+++ b/src/components/BurgerMenu/BurgerMenu.module.scss
@@ -38,9 +38,6 @@
   //   margin-right: 0;
   text-decoration: none;
   color: $secondary-text-color;
-  &:hover {
-    color: $accent-text-color;
-  }
 
   @include for-size(tablet) {
     font-size: 24px;
@@ -49,5 +46,5 @@
 }
 
 .activeLink {
-  color: $primary-text-color;
+  color: $accent-text-color;
 }
